--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
   /* height: 100vh; */
   z-index: 0;
   background-repeat: no-repeat;
-  background-image: url(../img/manh.jpg);
+  background-image: url(../img/pp,840x830-pad,1000x1000,f8f8f8.jpg);
   background-size: cover;
   background-position: 50%;
   -webkit-filter: blur(4px);
